stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_ordering_operand_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_ordering_operand_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × ordering operands are not comparable
   ╭─[tests/fixtures/diagnostics/types/inference_ordering_operand_mismatch.ml:2:26]
 1 │ fn main() {
 2 │   let less = fn(value) { value < true };
   ·                          ──────┬─────
   ·                                ╰── this ordering expression has type `bool`
 3 │   dbg(less(false))
   ╰────
  help: compare i64 values with i64 values or string values with string values
